--- a/assets/theme.css
+++ b/assets/theme.css
@@ -2806,16 +2806,16 @@ ul, ol {
   }
 }
 .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel {
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+  padding-top: 91px;
+  overflow-x: hidden;
   display: grid;
+  grid-auto-flow: column;
   grid-auto-columns: 31.25%;
   grid-template-rows: 355px;
   column-gap: 44px;
-  padding-top: 91px;
-  overflow-x: hidden;
-  grid-auto-flow: column;
   scroll-snap-type: x mandatory;
-  scroll-behavior: smooth;
-  scrollbar-width: none;
 }
 @media only screen and (max-width: 1440px) {
   .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel {
@@ -2866,9 +2866,9 @@ ul, ol {
 }
 .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card {
   background: rgba(0, 0, 0, 0.2);
-  scroll-snap-align: start;
   border: 1.108px solid rgba(62, 62, 62, 0.4);
   border-radius: 28.669px;
+  scroll-snap-align: start;
   transition: transform 0.1s linear;
 }
 @media only screen and (max-width: 480px) {
@@ -2878,11 +2878,26 @@ ul, ol {
     border-radius: 19.922px;
   }
 }
+.db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.firstNative .card-wrapper {
+  padding-top: 75px;
+  padding-right: 25px;
+  padding-bottom: 76px;
+}
 .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.firstNative .card-wrapper .db-natives-image-container {
   width: 221.359px;
   height: 379.754px;
   left: -10px;
   bottom: -15px;
+}
+.db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.firstNative .card-wrapper .db-natives-profile {
+  max-width: 192px;
+  width: 100%;
+  min-width: 192px;
+}
+.db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.secondNative .card-wrapper {
+  padding-top: 86px;
+  padding-bottom: 86px;
+  padding-right: 44px;
 }
 .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.secondNative .card-wrapper .db-natives-image-container {
   width: 286.889px;
@@ -2890,11 +2905,26 @@ ul, ol {
   left: -15px;
   bottom: -15px;
 }
+.db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.secondNative .card-wrapper .db-natives-profile {
+  max-width: 175px;
+  width: 100%;
+  min-width: 175px;
+}
+.db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.thirdNative .card-wrapper {
+  padding-top: 77px;
+  padding-bottom: 77px;
+  padding-right: 52px;
+}
 .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.thirdNative .card-wrapper .db-natives-image-container {
   width: 183.245px;
   height: 392.548px;
   left: 15px;
   bottom: -15px;
+}
+.db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card.thirdNative .card-wrapper .db-natives-profile {
+  max-width: 158px;
+  width: 100%;
+  min-width: 158px;
 }
 .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper {
   position: relative;
@@ -2902,9 +2932,6 @@ ul, ol {
   flex-direction: column;
   align-items: flex-end;
   height: 100%;
-  padding-top: 75px;
-  padding-right: 25px;
-  padding-bottom: 76px;
 }
 @media only screen and (max-width: 768px) {
   .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .wrapper .carousel .native-card .card-wrapper {
@@ -3024,7 +3051,7 @@ ul, ol {
   justify-content: flex-end;
   column-gap: 70px;
 }
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 1440px) {
   .db-page--about-us .db-section--about-us-after-life .db-container .db-row .db-col:nth-child(2) .db-buttons-slider .buttons {
     justify-content: center;
   }
