--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -3,7 +3,7 @@
 {% endcomment %}
 {% if template != 'index' %}
 
-  {% comment %} <footer class="db-footer site-footer">
+  <footer class="db-footer site-footer">
     <section class="db-section db-section--newsletter">
       <div class="db-container">
         <div class="db-row">
@@ -115,6 +115,6 @@
         </p>
       </div>
     </section>
-  </footer> {% endcomment %}
+  </footer>
 
 {% endif %}
