--- a/snippets/widget--roadmap.liquid
+++ b/snippets/widget--roadmap.liquid
@@ -1,4 +1,7 @@
-<div class="db-widget-item --roadmap">
+<a class="db-widget-item --roadmap"
+  title="Roadmap"
+  href="{{ shop.url }}/pages/roadmap"
+  draggable="false">
   <div class="db-widget-box">
     <h5>
       ROADMAP
@@ -7,4 +10,4 @@
       12 Month Roadmap Milestones
     </p>
   </div>
-</div>
+</a>
