--- a/snippets/widget--year-2069.liquid
+++ b/snippets/widget--year-2069.liquid
@@ -1,4 +1,7 @@
-<div class="db-widget-item --year-2069">
+<a class="db-widget-item --year-2069"
+  title=""
+  href="{{ shop.url }}/pages/about-us"
+  draggable="false">
   <div class="db-widget-box">
     <div class="year-wrap">
       <span>YEAR</span>
@@ -7,7 +10,7 @@
     <p>
       undead rock the world
     </p>
-    <a class="db-btn--explore-the-world db-btn"
+    <div class="db-btn--explore-the-world db-btn"
       title=""
       href="">
       <div class="db-btn-wrap">
@@ -15,6 +18,6 @@
           Explore The World
         </div>
       </div>
-    </a>
+    </div>
   </div>
-</div>
+</a>
