--- a/styles/db-theme/_animation.scss
+++ b/styles/db-theme/_animation.scss
@@ -19,6 +19,18 @@
   }
 }
 
+@keyframes fade-in-out {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
 @keyframes zoom-in {
   from {
     scale: 1.0;
@@ -34,6 +46,24 @@
   }
   to {
     scale: 1.0;
+  }
+}
+
+@keyframes slide-up {
+  from {
+    translate: 0 200px;
+  }
+  to {
+    translate: 0 0;
+  }
+}
+
+@keyframes slide-down {
+  from {
+    translate: 0 -200px;
+  }
+  to {
+    translate: 0 0;
   }
 }
 
