--- a/styles/db-theme/_page--home.scss
+++ b/styles/db-theme/_page--home.scss
@@ -248,10 +248,6 @@
                     overflow: hidden;
                     cursor: grab;
 
-                    @media only screen and (max-width: 768px) {
-                      pointer-events: none;
-                    }
-
                     .db-widget-row {
                       display: flex;
                       justify-content: space-between;
@@ -408,19 +404,18 @@
       }
     }
 
-    // &::after {
-    //   content: '';
-    //   position: absolute;
-    //   z-index: 3;
-    //   top: unset;
-    //   right: 0;
-    //   bottom: 0;
-    //   left: 0;
-    //   display: block;
-    //   background: linear-gradient(0deg, #0E0914 0%, rgba(14, 9, 20, 0.00) 100%);
-    //   width: 100%;
-    //   height: 160px;
-    // }
+    &::after {
+      content: '';
+      position: absolute;
+      z-index: 3;
+      inset: 0;
+      display: block;
+      width: 100%;
+      height: 100%;
+      pointer-events: none;
+      transition:
+        display 0ms ease-in-out 0ms;
+    }
 
     &.--animate-now {
       .db-container {
@@ -521,6 +516,12 @@
             }
           }
         }
+      }
+
+      &::after {
+        display: none;
+        transition:
+          display 0ms ease-in-out 2000ms;
       }
     }
   }
