--- a/assets/theme.css
+++ b/assets/theme.css
@@ -4185,6 +4185,18 @@ ul, ol {
   left: 50%;
   translate: -50% -50%;
 }
+.db-page--roadmap .db-section--main-roadmap .db-bg-container::before {
+  content: "";
+  position: absolute;
+  z-index: 2;
+  display: block;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(180deg, #0E0914 0%, rgba(14, 9, 20, 0) 100%);
+  height: 125px;
+  opacity: 0.7;
+}
 .db-page--roadmap .db-section--main-roadmap .db-bg-container::after {
   content: "";
   position: absolute;
