--- a/styles/db-theme/_page--roadmap.scss
+++ b/styles/db-theme/_page--roadmap.scss
@@ -61,6 +61,19 @@
         }
       }
 
+      &::before {
+        content: "";
+        position: absolute;
+        z-index: 2;
+        display: block;
+        top: 0;
+        left: 0;
+        right: 0;
+        background: linear-gradient(180deg, #0E0914 0%, rgba(14, 9, 20, 0.00) 100%);
+        height: 125px;
+        opacity: 0.7;
+      }
+
       &::after {
         content: '';
         position: absolute;
