--- a/sections/page-roadmap.liquid
+++ b/sections/page-roadmap.liquid
@@ -8,7 +8,7 @@
   <section class="db-section db-section--main-roadmap">
     <div class="db-bg-container">
       <video class="db-bg-video"
-        src="https://cdn.shopify.com/videos/c/o/v/4f34825f8d9648dfb5d54eae9e4caa06.webm"
+        src="https://cdn.shopify.com/videos/c/o/v/2610772c2f4143bfbeb9582c1c4ed175.mp4"
         allow="autoplay"
         preload="auto"
         control="false"
