update roadmap widget

--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1466,7 +1466,7 @@ ul, ol {
 }
 .db-widget-item.--roadmap .db-widget-box {
   display: block;
-  background-image: url("DB_Widget05_bg-v01-814x392.jpg");
+  background-image: url("DB_Widget05_bg-v01-860x480.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-color: transparent;
@@ -1493,14 +1493,16 @@ ul, ol {
   transition: all 200ms ease-in-out 0ms;
 }
 .db-widget-item.--roadmap .db-widget-box h5 {
+  position: relative;
+  z-index: 10;
+  text-align: right;
+  text-shadow: 1.7687276602px 1.7687276602px 13.265458107px rgba(0, 0, 0, 0.15);
   font-family: var(--primaryFontFamily);
-  font-size: 88px;
+  font-size: 92.973px;
   font-style: normal;
   font-weight: 600;
-  text-align: center;
-  text-shadow: 1.6741213799px 1.6741213799px 12.5559110641px rgba(0, 0, 0, 0.15);
-  line-height: 1em;
-  letter-spacing: -3.52px;
+  line-height: 100%; /* 92.973px */
+  letter-spacing: -3.719px;
   display: block;
   background: linear-gradient(180deg, #C0B7FF 5.47%, rgba(185, 200, 255, 0.3) 57.21%, rgba(181, 210, 255, 0) 89.93%);
   background-clip: text;
