--- a/sections/page-roadmap.liquid
+++ b/sections/page-roadmap.liquid
@@ -58,7 +58,7 @@
         </div>
         <div class="db-col">
           <p>
-            Let's work together
+            Visit our Talent Network
           </p>
           <a class="db-btn--talent-network"
             title="VISIT US"
